Mon Nov  6 16:52:14 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Sock_Connect.cpp:
          My fix for Solaris x86 broke HPUX. The trouble is that the
          method ACE::count_interfaces() is only used by the "generic"
          implementation of get_ip_interfaces(). Probably a better
          solution is to remove count_interfaces() and move its
          functionality into the get_ip_interfaces() implementation, but
          that is a bigger change than I care to make at the moment. I
          think it should be possible to do so in a way that also reduces
          the footprint and improves performance by eliminating the
          effectively duplicated code in count_interfaces().

Mon Nov 06 14:14:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * ace/config-vxworks6.3.h:

          Fixed incorrect definition of IOV_MAX.

Mon Nov  6 13:08:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-sunos5.5.h:
          Added ACE_HAS_GETRUSAGE, thanks to Michael Klein
          <michael dot klein at fazi dot de> for reporting that SunOS has
          this method, fixes bugzilla 2694.

Mon Nov  6 12:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Service_Configurator/Misc/main.cpp:
        * examples/Service_Configurator/Misc/Service_Configurator_Misc.mpc:
        * examples/Service_Configurator/Misc/svc.conf1
          Fixed shared library name, make working for embedded platforms.
          Thanks to Abdul Sowayan <abdullah dot sowayan at lmco dot com>
          for reporting this, fixes bugzilla bug 2698

Mon Nov 06 11:17:10 UTC 2006  Martin Corino  <mcorino@remedy.nl>

        * ace/Service_Config.cpp:

          Implemented a fix for runtime problems in case
          ACE_HAS_NONSTATIC_OBJECT_MANAGER is defined (seen on VxWorks 6.3 RTP).

Sun Nov  5 14:14:51 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Sock_Connect.cpp:
          Fix for Solaris x86.
