@@ -197,7 +197,7 @@ Gateway::parse_connection_config_file (void)
   // Read config file one line at a time.
 
   for (Connection_Config_Info pci;
-       connection_file.read_entry (pci, line_number) != FP::RT_EOFILE;
+       connection_file.read_entry (pci, line_number) != FPRT::RT_EOFILE;
        )
     {
       file_empty = 0;
@@ -278,7 +278,7 @@ Gateway::parse_consumer_config_file (void)
 
   // Read config file line at a time.
   for (Consumer_Config_Info cci_entry;
-       consumer_file.read_entry (cci_entry, line_number) != FP::RT_EOFILE;
+       consumer_file.read_entry (cci_entry, line_number) != FPRT::RT_EOFILE;
        )
     {
       file_empty = 0;
